# audio-toolkit

./: changelog.md  contributing.md  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt
.github/: copilot-instructions.md
docs/: file-structure.md
docs/info/: description.md
docs/plugins/: creating-plugins.md
docs/specs/: 00_context.md  01_requirements.md  02_design.md  03_plan.md  03_plan_0-2.md  03_plan_4.md  03_plan_5-8.md  03_plan_phase3_checklist.md  cli_spec.md  core_spec.md  processors_spec.md  utils_spec.md
src/: __init__.py  main.py
src/core/: __init__.py  exceptions.py  interfaces.py  types.py
src/orchestration/: __init__.py  pipeline.py  pipeline_config.py  plugin_manager.py  session.py  session_store.py
src/presentation/: __init__.py
src/presentation/cli/: __init__.py  analyze_cmd.py  convert_cmd.py  pipeline_cmd.py  plugin_cmd.py  session_cmd.py  split_cmd.py  voice_cmd.py
src/presentation/wizard/: __init__.py  components.py  convert_wizard.py  main_menu.py  preset_manager.py  split_wizard.py
src/processors/: __init__.py  converter.py  dynamics.py  noise_reduce.py  statistics.py  transcriber.py  trimmer.py  visualizer.py
src/processors/splitter/: __init__.py  base.py  fixed.py
src/utils/: __init__.py  audio.py  config.py  file_ops.py  logger.py  progress.py  validators.py
tests/: conftest.py
tests/fixtures/sample_plugin/: README.md  pyproject.toml
tests/fixtures/sample_plugin/sample_plugin/: __init__.py  echo_processor.py
tests/integration/: test_audio_processing.py  test_cli.py  test_crash_recovery.py  test_phase7_integration.py  test_pipeline.py
tests/unit/: test_audio.py  test_cli_convert.py  test_cli_pipeline.py  test_cli_plugin.py  test_cli_session.py  test_cli_split.py  test_config.py  test_converter.py  test_exceptions.py  test_file_ops.py  test_interfaces.py  test_logger.py  test_phase7_cli.py  test_phase7_processors.py  test_pipeline_config.py  test_pipeline_engine.py  test_plugin_manager.py  test_processor_registry.py  test_progress.py  test_session_manager.py  test_session_store.py  test_splitter_fixed.py  test_types.py  test_utils.py  test_validators.py  test_wizard.py  test_wizard_comprehensive.py
