[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audio-toolkit"
version = "1.0.0"
description = "A comprehensive audio processing CLI toolkit with session management, crash recovery, and plugin support"
readme = "readme.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Lucian-Adrian", email = "lucian@example.com"},
]
maintainers = [
    {name = "Lucian-Adrian", email = "lucian@example.com"},
]
keywords = ["audio", "processing", "cli", "toolkit", "pydub", "splitting", "conversion", "pipeline"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Multimedia :: Sound/Audio :: Conversion",
    "Environment :: Console",
]
dependencies = [
    "pydub>=0.25.1",
    "typer[all]>=0.9.0",
    "rich>=13.7.0",
    "pydantic>=2.5.0",
    "PyYAML>=6.0",
    "InquirerPy>=0.3.4",
    "audioop-lts>=0.2.1; python_version>='3.13'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "pre-commit>=3.5.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
]

[project.scripts]
audiotoolkit = "src.main:main"

[project.entry-points."audiotoolkit.plugins"]
splitter-fixed = "src.processors.splitter.fixed:FixedDurationSplitter"
converter = "src.processors.converter:Converter"

[project.urls]
Homepage = "https://github.com/Lucian-Adrian/audio-toolkit"
Repository = "https://github.com/Lucian-Adrian/audio-toolkit"
Documentation = "https://github.com/Lucian-Adrian/audio-toolkit#readme"
Issues = "https://github.com/Lucian-Adrian/audio-toolkit/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "pydub.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "InquirerPy.*"
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["B011"] # assert false

[tool.pytest.ini_options]
minversion = "7.4"
addopts = "-ra -q --cov=src --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]