[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sample-plugin"
version = "0.1.0"
description = "Sample Audio Toolkit plugin for testing"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Audio Toolkit", email = "audiotoolkit@example.com"}
]
dependencies = []

[project.entry-points."audiotoolkit.plugins"]
echo-test = "sample_plugin.echo_processor:EchoProcessor"

[tool.setuptools.packages.find]
where = ["."]
include = ["sample_plugin*"]
